test/must_fail/api/must_fail_terminal_size.ngjs
#!/usr/bin/env ngspicejs
// no args needed
// linter: ngspicejs-lint
"use strict";

terminal_size(1);
